# 2026-TeamControl

./: .gitignore  CONTRIBUTING.md  README.md  calibration.json  codex-context.md  context.md  logs.txt  main.py  main_bt_3v3.py  main_bt_6v6.py  pyproject.toml  startup_check.py  tuning.json
.claude/: settings.json
behaviour_tree/: attack_tree.py  skill_nodes.py  skill_test_tree.py  striker_tree.py  striker_tree2025.py
calibration/: trajectories.py
config/: config_loader.py  pd_gains.json
docs/: 26b638f_changes.txt  Multiprocessing.md  active-world-map.md  attack-handoff.md  bt_contracts.md  bt_v2_6v6_sim.md  bt_v2_integration.md  future.md  game_states_summary.md  getting-started.md  implement_substate_actions.txt  maintainers.md  motion-strategy.md  pd-controller-design.md  snapshot.md  supporter_v2.md  version-diff.md  voronoi-map-generator.md  voronoi-navigator-stripped.md  voronoi-planner-rules.md
scripts/: README.md  build_windows.ps1  render_voronoi_png.py
tests/: gc_message_test.py  logger_test.py  test_arrival.py  test_grsim_send.py  test_vision_recv.py  vision_message_test.py
tests/bt/: test_adapter_units.py  test_attacker_pass_balance.py  test_attacker_press.py  test_attacker_tree.py  test_ball_in_field.py  test_behavior_tree_tuning.py  test_blackboard.py  test_blue_competition_opponent.py  test_blue_div_b_opponent.py  test_clash_royale.py  test_coordinator.py  test_coordinator_integration.py  test_counter_attack.py  test_defender_lane_blocking.py  test_defender_tree.py  test_dribble_nudge.py  test_e2e_attacker_pipeline.py  test_extra_heuristics.py  (+26 more)
(+183 files in other folders)
